# mithril

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  ROADMAP.md  Taskfile.yml  buf.gen.yaml  buf.yaml  go.mod  go.sum
chunk-node/: config.go  main.go
chunk-node/chunkerrors/: chunk_error.go  errors.go  remote_error.go
chunk-node/cli/: init.go  root.go  server.go  version.go
chunk-node/config/: cluster.go  config.go  load.go  node.go  tls.go  volumes.go  volumes_directory.go
chunk-node/darwin/: cf.go  doc.go  errors.go  errors_test.go  io_block_storage_device.go  io_block_storage_driver.go  io_media.go  io_media_test.go  io_service.go  io_service_test.go
chunk-node/domain/: chunk.go  node.go  (+9 more)
dev/: docker-compose.yml  go.Dockerfile
doc/: volume label design.md
mithril-node-go/: main.go
mithril-sdk-rs/: Cargo.toml
mithril-sdk-rs/src/: domain.rs  lib.rs
mithril-sdk-rs/src/adapter/: grpc_chunk_service.rs  mod.rs
mithril-sdk-rs/src/adapter/bitset/: bitarray.rs  bitset.rs  bitvecset.rs  mod.rs  slice.rs  word.rs  wordslice.rs
mithril-sdk-rs/src/adapter/coding/: mod.rs  replication.rs  shec.rs  xor.rs
mithril-sdk-rs/src/adapter/fdb_tuple/: mod.rs
mithril-sdk-rs/src/adapter/repository/: mod.rs
mithril-sdk-rs/src/adapter/repository/fjall/: mod.rs
mithril-sdk-rs/src/port/: chunk_service.rs  mod.rs  repository.rs
mithril-sdk-rs/src/service/: mod.rs
mithril-sdk-rs/src/service/executor/: batch.rs  chunk.rs  fragment.rs  mod.rs  strip.rs
mithril-sdk-rs/src/service/plan/: batch.rs  chunk.rs  fragment.rs  strip.rs
(+402 files in other folders)
