[package]
name = "mithril-sdk"
version = "0.1.0"
edition = "2024"

[features]
default = []


block = []
lsm = []
diskimage = [ "block" ]
file = ["block", "lsm" ]
object = [ "block", "lsm" ]


bazel = [ "dep:isa-l" ]
isa-l = [ "dep:isa-l" ]

[dependencies]
mithril-proto = { path = "../gen/rust/proto" }

base64 = "0.22.1"
bytes = "1.1.0"
bs58 = "0.5.1"
crc32c = "0.6"
foundationdb-tuple = { version = "0.10.0", features = ["uuid"] }
futures = "0.3.31"
prost = "0.13.1"
pbjson = "0.7"
pbjson-types = "0.7"
reed-solomon-simd = "3.1.0"
serde = "1.0"
smallvec = { version = "1.15.1", features = ["const_new", "write"] }
thiserror = "2"
tokio = { version="1.48.0", features = ["macros", "rt-multi-thread"]}
tonic = { version = "0.12", features = ["gzip"] }
uuid = { version = "1.18.1", features = ["v4"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }

[target.'cfg(any(target_arch = "aarch64", all(target_arch = "powerpc64", target_endian = "little"), target_arch = "riscv64", target_arch = "x86_64"))'.dependencies]
isa-l = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
